# voxelterrian

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeLists.txt.in  EffectComposer.h  FrameBuffer.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  MarchingCubeTests.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  editor  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc  imgui.ini  kestrel-tests.vcxproj  kestrel-tests.vcxproj.filters  kestrel.sln  kestrel.vcxproj  kestrel.vcxproj.filters  main.cpp  runUnitTests.vcxproj  runUnitTests.vcxproj.filters
common/: shader.cpp  shader.hpp
googletest-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  googletest-distribution.sln
googletest-build/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
googletest-build/googlemock/gtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
googletest-download/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  googletest-download.sln  googletest.vcxproj  googletest.vcxproj.filters
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
shaders/: copy.fragmentshader  copy.vertexshader  depth.vertexshader  shadow.vertexshader  standard.fragmentshader  standard.vertexshader  voxel.vertexshader
src/: Brush.h  Camera.cpp  Camera.h  CameraControl.h  Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h  ComputeShader.h  Density_SSBO.h  DirectionalLight.cpp  DirectionalLight.h  Dispatcher.h  Editor.h  EditorCameraControl.cpp  EditorCameraControl.h  Entity.cpp  Entity.h  Field3.h  Geometry.cpp  Geometry.h  LambertGeometry.h  Logger.cpp  Logger.h  MarchingCube.h  Mask.cpp  Mask.h  Material.h  Mesh.cpp  Mesh.h  Mesher.cpp  Mesher.h  Node.cpp  Node.h  Noise.h  NoiseMap2.cpp  NoiseMap2.h  Raycast.cpp  Raycast.h  ReferenceCounted.h  (+26 more)
src/core/: AmbientLight.h  ArrayBuffer.h  Camera.cpp  Camera.h  ComputeShader.h  CopyPass.h  DirectionalLight.cpp  DirectionalLight.h  EffectComposer.h  ElementBuffer.h  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Pass.h  RenderPass.h  RenderTarget.h  Renderer.cpp  Renderer.h  Scene.h  Shader.h  ShaderMaterial.h  ShadowMap.h  ShadowMaterial.h  StandardGeometry.h  StandardMaterial.h  Window.h
src/geometries/: BoxGeometry.h  SphereGeometry.h
src/postprocessing/: ShadowPass.h
tests/: ChunkTests.cpp  ChunksTests.cpp  Coord3Tests.cpp  Field3Tests.cpp  MarchingCubeTests.cpp  MesherTests.cpp  OrthographicCameraTests.cpp  RaycastTests.cpp  RunnerTests.cpp  TerrianTests.cpp
